deploy/kustomize/apps/nginx/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:1.23.4-alpine
          imagePullPolicy: Always
          name: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx
          configMap:
            name: nginx
