deploy/kustomize/apps/nginx/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  # annotations:
  #   # kubernetes.io/ingress.class: nginx
  #   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
